<resources>
    <string name="app_name">GetDriver</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_log_in">Log in</string>
    <string name="hint_phone">Phone number</string>
    <string name="action_id">ID</string>
    <string name="credit_card">Credit card</string>
    <string name="err_msg_FirstName">Too short name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_pass">Too short password</string>
    <string name="err_msg_phone">Enter valid phone number</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="msg_booked">Your driver account successfully created</string>
    <string name="err_msg_det">Email or password is incorrect</string>
    <string name="err_msg_alr">This email already exist</string>
    <string name="TT_contact_developer">Contact the developer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="distance">distance</string>
    <string name="destination">destination</string>
    <string name="KM">KM</string>
    <string name="full_name">"full name "</string>
    <string name="source">source:</string>
    <string name="send_email_to_passenger">send email to passenger</string>
    <string name="call_to_passenger">call to passenger</string>
    <string name="send_message_to_passenger">send message to passenger</string>
    <string name="take_the_ride">take the ride</string>
    <string name="update">update ride</string>
    <string name="pass_progress">the ride pass to progress rides</string>
    <string name="start">"start "</string>
    <string name="end">"End "</string>
    <string name="endRide">End the ride</string>
    <string name="no_ride">there no ride in progress</string>
    <string name="pass_FINISHED">FINISHED</string>
    <string name="msg_bye">Goodbye! see you soon! ت</string>
    <string name="firebase_error">failure to load firebase</string>
    <string name="history_drive">Finished drive:</string>
    <string name="ils"> ILS</string>
    <string name="payment">Payment:</string>
    <string name="remember_me">remember me!</string>
    <string name="empty">Please Fill all the Fields!!</string>
    <string name="store">Data Stored Successfuly!</string>
    <string name="fetch">Data Displayed Successfuly!</string>
    <string name="new_reqest">new request for drive</string>
    <string name="relevent_ride">you have a new relevant ride to take</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="err_msg_id">Too short id</string>
</resources>
