<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.inProgressFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_phone" />
        <EditText
            android:id="@+id/PhoneEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/startLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start" />
        <EditText
            android:id="@+id/startLocationEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>


        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/endLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end" />
            <EditText
                android:id="@+id/endLocationEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
    </LinearLayout>

        <Button
            android:id="@+id/endRide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/endRide"
            />


    </LinearLayout>

</FrameLayout>